# grandine-zk

./: .gitignore  Cargo.toml
bls/bls-zkcrypto/src/: signature.rs
fork_choice_store/src/: store.rs
helper_functions/src/: lib.rs
transition_functions/src/: lib.rs
transition_functions/src/altair/: state_transition.rs
transition_functions/src/bellatrix/: state_transition.rs
transition_functions/src/capella/: state_transition.rs
transition_functions/src/deneb/: state_transition.rs
transition_functions/src/electra/: state_transition.rs
transition_functions/src/phase0/: state_transition.rs
types/src/: combined.rs
zkvm/guest/risc0/guest/: Cargo.toml
zkvm/guest/risc0/guest/src/: main.rs
zkvm/guest/sp1/: Cargo.toml
zkvm/guest/sp1/src/: main.rs
zkvm/guest/zisk/: Cargo.toml  build.rs
zkvm/guest/zisk/src/: main.rs
zkvm/host/: Cargo.toml
zkvm/host/src/: backend.rs  main.rs
zkvm/host/src/backend/: mod.rs  risc0.rs  sp1.rs  zisk.rs
